--- a/basic-site/style.css
+++ b/basic-site/style.css
@@ -1,50 +1,69 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face{
+    font-family: 'Android';
+    src: url('nova_pasta/fontes/idroid.otf');
+    font-weight: normal;
+}
+
+* {
     margin: 0;
     padding: 0;
 }
 
-header{
-    text-align: center;
-    background: linear-gradient(to bottom, rgb(62, 223, 148) ,#085a38);
-    color: white;
-    text-shadow: 2px 0  black;
+:root{
+    --cor0: #3edf94;
+    --cor1: #085a38;
+    --cor2: wheat;
+
+    --font-padrao: Arial, Verdana, helvetica, sans-serif;
+    --font-destaque:'Bebas Neue', sans-serif;
+    --font-android: 'Android', sans-serif; 
 }
 
-h1{
+body{
+    font-family: var(--font-padrao);
+}
+header {
+    text-align: center;
+    background: linear-gradient(to bottom, rgb(62, 223, 148), #085a38);
+    color: white;
+    font-family: var(--font-destaque);
+}
+
+main h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 100;
-    font-size: 45px; 
+    font-size: 45px;
     padding: 30px;
 }
-
-#textoInicial{
-  font-size: 20px;
-  display: inline-block;
-  width: 500px;
-  margin-bottom: 15px;
-}
-
-nav{
+nav {
     text-align: start;
     padding-bottom: 20px;
 }
 
-a{
+a {
     text-decoration: none;
-    color: white;
+    color: black;
     padding-left: 30px;
     text-shadow: none;
     font-size: 17px;
 }
+main h1{
+    font-family: var(--font-android);
+}
+main h2{
+    font-family: var(--font-android);
+}
 
-main{
-    background-color: #70ffc4;
-    text-align: center;
-    height: 900px;
-}
-#section{
-    background-color: white;
-    padding: 40px 325px;
+#textoInicial {
+    font-size: 20px;
     display: inline-block;
-    border-radius: 15px;
+    width: 500px;
+    margin-bottom: 15px;
 }
+
+
+
+
+
