--- a/codewellex.1/style.css
+++ b/codewellex.1/style.css
@@ -1,3 +1,4 @@
+
 @font-face {
     font-family: 'HankenGrotesk';
     src: url('configure/fonts/HankenGrotesk-VariableFont_wght.ttf');
@@ -14,8 +15,9 @@ main{
     justify-content: center;
     align-items: center;
     height: 100vh;
-   
+    background-color: hsl(221, 100%, 96%);
 }
+
 section{
     background-color: aqua;
     height: 325px;
@@ -32,7 +34,7 @@ section{
 summary{
     height: 365px;
     width: 250px;
-    background-color: hsl(221, 100%, 96%);
+    background-color: white;
     padding: 20px;
     padding-left: 39px;
     border-radius: 25px;
@@ -77,7 +79,7 @@ font-size: 16px;
 
 #summary{
     font-size: 20px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     margin-top: 17px;
     padding-left: 9px;
 }
@@ -90,7 +92,56 @@ font-size: 16px;
 }
 
 .space{
-    margin-right: 70px;
     margin-left: 10px;
     font-size: 18px;
-    display: f
+    display: flex;
+    width: 70%;
+}
+
+.points{
+    width: 30%;
+    color: hsl(241, 100%, 89%);
+    font-weight: 600;
+}
+
+#reaction{
+    color:  hsl(0, 100%, 67%);
+}
+
+#memory{
+    color: hsl(39, 100%, 56%);
+}
+
+#verbal{
+    color: hsl(166, 100%, 37%);
+}
+
+#visual{
+    color: hsl(234, 85%, 45%);
+}
+
+.dark{
+    color: black;
+}
+
+#conteiner-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#button{
+    width: 220px;
+    height: 43px;
+    color: white;
+    background-color: hsl(224, 30%, 27%);
+    cursor: pointer;
+    border-radius: 20px;
+    font-size: 17px;
+    border: 0;
+}
+
+#button:hover{
+    background-color: hsl(241, 100%, 91%);
+    color:  hsl(224, 40%, 58%);
+    transition-duration: 0.4s;
+}
