--- a/display.grid/grid.css
+++ b/display.grid/grid.css
@@ -2,8 +2,11 @@ body {
     display: grid;
     grid-template-areas:
     "header header header"
-    "aside main main"
+    "aside main  main "
     "footer footer footer";
+    grid-gap: 1rem;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto 100vh auto;
 }
 .o-header {
     grid-area: header;
@@ -20,3 +23,8 @@ body {
 .o-footer {
     grid-area: footer;
 }
+
+.o-header, .o-aside, .o-main, .o-footer {
+    background: #BC20E2;
+    color: #FDFDFD;
+    }
